--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Family Cash</h2>
             <span class="subheading">Dale una alegría a tu bolsillo</span>
             
-            <p>Descubre el catálogo Family Cash online y las mejores ofertas de nuestros supermercados cada semana.</p>
+            <p>Recibe nuestro catálogo Family Cash, con las mejores ofertas de nuestros supermercados cada semana, directamente en tu buzón.</p>
             
             <form>
                 <input type="text" required placeholder="Nombre" aria-label="Name">
